Fine-tune minor details

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Flask Blog</h1>
-              <span class="subheading">A Blog built with flask and a postgresql database</span>
+              <span class="subheading">A Blog built with flask and a PostgreSQL database</span>
             </div>
           </div>
         </div>
